# rust-htmx-test

./: .env.example  .gitignore  :  Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs  templates.rs  turso_api.rs  turso_db_handler.rs  users.rs
templates/: app.html  form.html  index.html  list.html
