[package]
name = "rust-htmx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["http2", "tokio", "http1"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
